--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
       </div>
     </div>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <button type="button" >Подписаться на новости</button>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 
