--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     p {
       font-size: 18px;
     }
+    button {
+    background: #C1172C; /* Синий цвет фона */
+    color: #fff; /* Белый цвет текста */
+    border: none; /* Убираем рамку */
+    padding: 1rem 1.5rem; /* Поля вокруг текста */
+    margin-bottom: 1rem; /* Отступ снизу */ 
+   }
   </style>
 </head>
 
